# StockResearchAgenticAI

./: .env.example  .gitignore  README.md  SETUP.md  TESTING.md  app.py  config.py  pyproject.toml  pytest.ini  requirements.txt  run_analysis.py  run_bot.py
.github/workflows/: tests.yml
.streamlit/: config.toml
agents/: __init__.py  fundamental_agent.py  market_data_agent.py  news_agent.py  report_agent.py  strategist_agent.py  technical_agent.py
bot/: __init__.py  telegram_bot.py
crews/: __init__.py  research_crew.py
data/: .gitkeep
tests/: __init__.py  conftest.py  test_agents.py  test_analysis.py  test_app.py  test_config.py  test_crews.py  test_fundamental.py  test_institutional.py  test_integration.py  test_market_data.py  test_news_scraper.py  test_telegram_bot.py
tools/: __init__.py  analysis.py  institutional.py  market_data.py  news_scraper.py
