[project]
name = "stock-research-assistant"
version = "1.0.0"
description = "AI-Powered Stock Research Assistant for Indian Markets using CrewAI and Mistral AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # CrewAI Framework
    "crewai>=0.86.0",
    "crewai-tools>=0.17.0",
    # LLM Integration
    "litellm>=1.40.0",
    # Telegram Bot
    "python-telegram-bot>=21.0",
    # Web Scraping
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # Indian Market Data
    "yfinance>=0.2.40",
    "nsetools>=1.0.11",
    # Technical Analysis & Data Processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    # Data Processing
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "tenacity>=8.2.0",
    # Web UI
    "streamlit>=1.32.0",
    # Charts & Reports
    "plotly>=5.18.0",
    "python-docx>=1.1.0",
    "fpdf2>=2.8.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "bot", "crews", "tools"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
